Hook up solr indexing